[package]
name = "mini-lsm-starter"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.1"
crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1.3"
parking_lot = "0.12.3"
ouroboros = "0.18"
moka = {version = "0.12.7", features = ["sync"] }
clap = { version = "4.5.9", features = ["derive"] }
rand = {version = "0.8.5", features = ["small_rng"]}
crossbeam-channel = "0.5.13"
serde_json = { version = "1.0.120" }
serde = { version = "1.0.204", features = ["derive"] }
farmhash = "1.1.5"
nom = "7.1.3"
rustyline = "14.0.0"
log = "0.4.22"
structured-logger = "1.0.3"
crc32fast = "1.4.2"
foldhash = "0.1.1"

[dev-dependencies]
tempfile = "3"
criterion = {version = "0.5.1", features = ["html_reports"]}

[[bench]]
name = "minilsm_bench"
harness = false
